@startuml
title State Diagram - Trạng thái đơn đặt vé
[*] --> PENDING : create after valid holds
PENDING --> SUCCESS : verified payment success
PENDING --> FAILED : payment failed
PENDING --> EXPIRED : payment timeout scheduler
PENDING --> CANCELLED : customer/operator cancel when policy permits
SUCCESS --> REFUND_PENDING : showtime cancellation/refund policy
REFUND_PENDING --> REFUNDED : operator marks refund success
note right of REFUND_PENDING
Nếu hoàn tiền thất bại, Payment chuyển
REFUND_FAILED; Booking vẫn giữ REFUND_PENDING
để nhân viên tiếp tục theo dõi và xử lý.
end note
SUCCESS --> CANCELLED : cancellation policy if applicable
FAILED --> [*]
EXPIRED --> [*]
CANCELLED --> [*]
REFUNDED --> [*]
@enduml
